--- a/src/app/_components/moduleCss/footer.module.css
+++ b/src/app/_components/moduleCss/footer.module.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 250px;
+  height: 270px;
 }
 
 .footer{
@@ -18,11 +18,30 @@
   font-size: 30px;
 }
 
-.items{
+.itemsBlog{
   display: flex;
   flex-direction: column;
 }
+.itemsSocial{
+  display: flex;
+  flex-direction: column;
+}
+
 .link{
   color: #d3d1d1;
   font-weight: 700;
+}
+
+@media screen and (max-width: 700px) {
+  .itemsSocial{
+    display: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .itemsBlog{
+    display: none;
+  }
+  .container{
+    height: 200px;
+  }
 }
